4530.	[bug]		Change 4489 broke the handling of CNAME -> DNAME
			in responses resulting in SERVFAIL being returned.
			[RT #43779]

4528.	[bug]		Only set the flag bits for the i/o we are waiting
			for on EPOLLERR or EPOLLHUP. [RT #43617]

4527.	[doc]		Support DocBook XSL Stylesheets v1.79.1. [RT #43831]

4526.	[doc]		Corrected errors and improved formatting of
			grammar defintiions in the ARM. [RT #43739]

4525.	[doc]		Fixed outdated documentation on managed-keys.
			[RT #43810]

4524.	[bug]		The net zero test was broken causing IPv4 servers
			with addresses ending in .0 to be rejected. [RT #43776]

4523.	[doc]		Expand config doc for <querysource4> and
			<querysource6>. [RT #43768]

4522.	[bug]		Handle big gaps in log file version numbers better.
			[RT #38688]

4521.	[cleanup]	Log it as an error if an entropy source is not
			found and there is no fallback available. [RT #43659]

4520.	[cleanup]	Alphabetise more of the grammar when printing it
			out. [RT #43755]

4519.	[port]		win32: handle ERROR_MORE_DATA. [RT #43534]

4515.	[port]		FreeBSD: Find readline headers when they are in
			edit/readline/ instead of readline/. [RT #43658]

4513.	[cleanup]	Minimum Python versions are now 2.7 and 3.2.
			[RT #43566]

4509.	[test]		Make the rrl system test more reliable on slower
			machines by using mdig instead of dig. [RT #43280]

4507.	[bug]		Named could incorrectly log 'allows updates by IP
			address, which is insecure' [RT #43432]

4505.	[port]		Use IP_PMTUDISC_OMIT if available. [RT #35494]

4504.	[security]	Allow the maximum number of records in a zone to
			be specified.  This provides a control for issues
			raised in CVE-2016-6170. [RT #42143]

4503.	[cleanup]	"make uninstall" now removes files installed by
			BIND. (This currently excludes Python files
			due to lack of support in setup.py.) [RT #42912]

4502.	[func]		Report multiple and experimental options when printing
			grammar. [RT #43134]
